--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,10 +1,8 @@
 {
     "*.{js,ts,json,md}": [
-        "prettier --write",
-        "git add"
+        "prettier --write"
     ],
     "*.{js,ts}": [
-        "eslint --fix",
-        "git add"
+        "eslint --fix"
     ]
 }
