--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
     "quality:check": "npm run lint && npm run format:check && npm run test:coverage",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "keywords": [
     "typescript",
