--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,14 @@
-# Configuración de SonarQube
-sonar.projectKey=qa_arquitectura
-sonar.projectName=Proyecto Calidad de Software
-sonar.projectVersion=1.0.0
+sonar.projectKey=OrleyZambrano_qa_arquitectura
+sonar.organization=orleyzambrano
 
-# Información del proyecto
-sonar.sources=src
-sonar.tests=src/__tests__
-sonar.exclusions=node_modules/**,dist/**,coverage/**
 
-# Configuración de TypeScript
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=qa_arquitectura
+#sonar.projectVersion=1.0
 
-# Configuración de cobertura
-sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts
 
-# Configuración de análisis
-sonar.sourceEncoding=UTF-8
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
